# redream

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ICLA.md  LICENSE  Makefile  Makefile.retro  README.md
Debug/: vc140.idb
Debug/Redream.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Redream.lastbuildstate
assets/: README.md  clouds.inc  disc.inc  fontawesome-webfont.inc  opensans-regular.inc  oswald-medium.inc
cmake/: FindClangFormat.cmake  FindClangTidy.cmake  SourceGroupByDir.cmake
docs/: .gitignore  CNAME  _config.yml  building.md  community.md  contact.md  design.md  download.md  index.md  media.md  running.md  testing.md
docs/_docs/: building.md  community.md  contributing.md  cpu-design.md  design.md  directory-structure.md  jit-design.md  memory-access.md  memory-design.md  powervr-notes.md  running.md  testing.md
docs/_includes/: disqus-comments.html
docs/_layouts/: default.html  doc.html  post.html
docs/_posts/: 2016-12-05-getting-started-contributing-to-emulator.md  2017-07-20-progress-report-july-2017.md
docs/css/: main.css  main.scss
docs/docs/: index.md
profiles/: ds3.ini  ps4.ini  ps4.json  xbox360.ini  xbox360.json
src/: debugger.c  debugger.h  dreamcast.c  dreamcast.h  emulator.c  emulator.h  glfw_host.c  host.h  imgui.cc  imgui.h  keycode.c  keycode.h  main.c  main.cc  main_libretro.c  memory.c  memory.h  microprofile.cc  microprofile.h  null_host.c  options.c  options.h  retro_host.c  scheduler.c  scheduler.h  sdl_host.c  stats.c  stats.h  tracer.c  tracer.h  ui.c  ui.h
src/aica/: aica.cc  aica.h  aica_regs.inc
src/audio/: audio_backend.h  backend.h  sdl_backend.c  soundio_backend.c
src/bios/: bios.c  flash.c  flash.h
src/core/: arena.h  array.h  assert.c  assert.cc  assert.h  bitmap.c  bitmap.h  config.h.in  constructor.h  core.h  debug_break.h  delegate.h  exception_handler.c  exception_handler.h  exception_handler_linux.c  exception_handler_mac.c  exception_handler_win.c  filesystem.c  filesystem.cc  filesystem.h  filesystem_posix.c  filesystem_win.c  hash.h  interval_tree.c  interval_tree.h  intrusive_list.h  intrusive_tree.h  list.c  list.h  log.c  log.cc  log.h  math.h  md5.c  md5.h  memory.c  memory.h  memory_posix.c  memory_win.c  minmax_heap.h  (+32 more)
src/cpu/: runtime.cc  runtime.h  sh4.cc  sh4.h  sh4_context.cc  sh4_context.h  sh4_regs.inc
src/emu/: debugger.cc  debugger.h  device.h  disc.cc  disc.h  dreamcast.cc  dreamcast.h  emulator.c  emulator.cc  emulator.h  memory.h  profiler.cc  profiler.h  scheduler.cc  scheduler.h  tracer.c  tracer.cc  tracer.h
src/file/: trace.c  trace.h
src/gdrom/: gdrom.cc  gdrom.h
src/guest/: debugger.c  dreamcast.c  dreamcast.h  memory.c  memory.h  scheduler.c  scheduler.h
src/holly/: gdrom.cc  gdrom.h  gdrom_replies.inc  holly.cc  holly.h  holly_regs.inc  maple.cc  maple.h  maple_controller.cc  maple_controller.h  pixel_convert.h  pvr2.cc  pvr2.h  pvr2_regs.inc  register.h  ta.cc  ta.h  tile_accelerator.cc  tile_accelerator.h  tile_renderer.cc  tile_renderer.h
src/host/: host.h  keycode.c  keycode.h  null_host.c  retro_host.c  sdl_host.c
src/hw/: debugger.c  debugger.cc  debugger.h  device.h  dreamcast.c  dreamcast.cc  dreamcast.h  machine.cc  machine.h  memory.c  memory.cc  memory.h  regions.h  register.h  scheduler.c  scheduler.cc  scheduler.h
src/jit/: emit_stats.c  emit_stats.h  guest.h  jit.c  jit.h  jit_backend.h  jit_frontend.h  jit_guest.h  pass_stats.c  pass_stats.h  runtime.cc  runtime.h  source_map.cc  source_map.h
src/render/: gl_backend.c  imgui.cc  imgui.h  microprofile.cc  microprofile.h  nuklear.c  nuklear.h  render_backend.h  ta.glsl  ui.glsl
src/renderer/: backend.h  gl_backend.c  gl_backend.cc  gl_backend.h  gl_context.h  gl_shader.cc  gl_shader.h  inconsolata_ttf.inc  ta.glsl  ui.glsl
src/sigsegv/: sigsegv_handler.cc  sigsegv_handler.h  sigsegv_handler_linux.cc  sigsegv_handler_linux.h  sigsegv_handler_mac.cc  sigsegv_handler_mac.h  sigsegv_handler_win.cc  sigsegv_handler_win.h
src/sys/: atomic.h  exception_handler.c  exception_handler.cc  exception_handler.h  exception_handler_linux.c  exception_handler_linux.cc  exception_handler_linux.h  exception_handler_mac.c  exception_handler_mac.cc  exception_handler_mac.h  exception_handler_win.c  exception_handler_win.cc  exception_handler_win.h  files.cc  files.h  filesystem.c  filesystem.cc  filesystem.h  filesystem_posix.c  filesystem_posix.cc  filesystem_win.c  filesystem_win.cc  keycode.cc  keycode.h  keys.cc  memory.c  memory.cc  memory.h  memory_posix.c  memory_posix.cc  memory_win.c  memory_win.cc  network.cc  network.h  segfault_handler.cc  segfault_handler.h  segfault_handler_linux.cc  segfault_handler_linux.h  segfault_handler_mac.cc  segfault_handler_mac.h  (+27 more)
src/system/: files.cc  files.h  keys.cc  keys.h  sigsegv_handler.cc  sigsegv_handler.h  sigsegv_handler_linux.cc  sigsegv_handler_linux.h  sigsegv_handler_mac.cc  sigsegv_handler_mac.h  sigsegv_handler_win.cc  sigsegv_handler_win.h  system.cc  system.h
src/trace/: trace.cc  trace.h  trace_viewer.cc  trace_viewer.h
src/ui/: imgui.cc  imgui.h  imgui_impl.cc  imgui_impl.h  keycode.c  keycode.cc  keycode.h  microprofile.cc  microprofile.h  microprofile_font.inc  microprofile_impl.cc  microprofile_impl.h  nuklear.c  nuklear.h  window.c  window.cc  window.h  window_listener.h  window_sdl.c
src/video/: backend.h  gl_backend.c  render_backend.h  ta.glsl  ui.glsl
test/: retest.c  retest.h  sh4_ctx.inc  sh4_test.cc  sh4_test.h  sh4_test.py  test_dead_code_elimination.c  test_dead_code_elimination_pass.c  test_dead_code_elimination_pass.cc  test_interval_tree.c  test_interval_tree.cc  test_intrusive_list.cc  test_list.c  test_list.cc  test_load_store_elimination.c  test_load_store_elimination_pass.c  test_load_store_elimination_pass.cc  test_memory.cc  test_minmax_heap.cc  test_ring_buffer.cc  test_sh4.c  test_sh4.cc  test_sh4.inc  test_sh4.py
test/asm/: add.s  addc.s  addv.s  and.s  bf.s  bra.s  braf.s  bsr.s  bsrf.s  bt.s  cmp.s  div0.s  div1s.s  div1u.s  dmul.s  dmuls.s  dmulu.s  (+80 more)
tools/: recc.c  recc.cc
(+373 files in other folders)
